<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_theme"
        android:textColor="@color/black"
        android:layout_margin="16dp"
        android:textSize="18sp"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGrp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/lightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="16sp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/light"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/darkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="16sp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/dark"
            android:textColor="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/defaultButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="16sp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/default_theme"
            android:textColor="@color/black" />


    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>