<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:padding="16dp"
    tools:context=".RoundedEditTextBox">

    <com.uiLibrary.bobbleLibrary.BobbleEditText
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:hint="@string/type_your_message_here"
        android:padding="16dp"
        android:textSize="12sp"
        android:typeface="serif"
        app:corner_radius="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit">

        <com.uiLibrary.bobbleLibrary.BobbleCardView
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="32dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/text_box_color"
                    android:textColor="@color/textColor"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/editImage1"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="8dp"
                    android:background="#BDBDBD"
                    app:layout_constraintBottom_toBottomOf="@id/text1"
                    app:layout_constraintLeft_toRightOf="@id/text1"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/border_color"
                    android:textColor="@color/textColor"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text1" />

                <ImageView
                    android:id="@+id/editImage2"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="8dp"
                    android:background="@color/black"
                    app:layout_constraintBottom_toBottomOf="@id/text2"
                    app:layout_constraintLeft_toRightOf="@id/text1"
                    app:layout_constraintTop_toTopOf="@id/text2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.uiLibrary.bobbleLibrary.BobbleCardView>

        <com.uiLibrary.bobbleLibrary.BobbleCardView
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="32dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="16dp"
            android:layout_gravity="center"
            app:cardCornerRadius="5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/text_box_color"
                    android:textColor="@color/textColor"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/editImage3"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="8dp"
                    android:background="#BDBDBD"
                    app:layout_constraintBottom_toBottomOf="@id/text3"
                    app:layout_constraintLeft_toRightOf="@id/text3"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/border_color"
                    android:textColor="@color/textColor"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text3" />

                <ImageView
                    android:id="@+id/editImage4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_margin="8dp"
                    android:background="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="@id/text4"
                    app:layout_constraintLeft_toRightOf="@id/text3"
                    app:layout_constraintTop_toTopOf="@id/text4" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.uiLibrary.bobbleLibrary.BobbleCardView>

    </GridLayout>

    <com.uiLibrary.bobbleLibrary.BobbleButton
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/reset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grid" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:paddingLeft="24sp"
        android:paddingTop="5dp"
        android:paddingRight="24sp"
        android:paddingBottom="5dp"
        android:text="@string/set_corner_radius"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset" />

    <SeekBar
        android:id="@+id/seek"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingLeft="24sp"
        android:paddingTop="5dp"
        android:paddingRight="24sp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <TextView
        android:id="@+id/texty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:paddingLeft="24sp"
        android:paddingTop="5dp"
        android:paddingRight="24sp"
        android:paddingBottom="5dp"
        android:text="@string/set_border_width"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seek" />

    <SeekBar
        android:id="@+id/seeky"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:paddingLeft="24sp"
        android:paddingTop="5dp"
        android:paddingRight="24sp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/texty" />

</androidx.constraintlayout.widget.ConstraintLayout>